Lots of changes.  Going on process.

--- a/templates/snmpd.header.conf.erb
+++ b/templates/snmpd.header.conf.erb
@@ -1,5 +1,5 @@
 #file managed with puppet
 # <%= @comment %>
 <% @sec_names.sort.each do |sec_name| -%>
-com2sec  <%= sec_name %>
+com2sec  <%= @sec_name %>
 <% end -%>
